Implement appointment scheduling feature with form validation and list view

--- a/backend/booking/templates/base.html
+++ b/backend/booking/templates/base.html
@@ -16,6 +16,7 @@
     <div class="navbar-nav ms-auto">
       <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
       <a class="nav-link" href="{% url 'service_list' %}">Serviços</a>
+      <a class="nav-link" href="{% url 'appointment_list' %}">Agendamentos</a>
       <a class="nav-link" href="{% url 'logout' %}">Sair</a>
     </div>
     {% endif %}
